
- Introduce RestructuredTextWidget (#10661).

- Introduce IPublishInfo.date_last_published_semantic (#10704).

- Introduce zeit.workflow.publishinfo.PublishInfo as base class for workflows
  instead of NotPublishablePublishInfo (#10739).


1.53.5 (unreleased)
-------------------

- Fold IContentAdder and IAddLocation into zeit.cms from zeit.addcentral
  (for #10692).


1.53.4 (2012-03-15)
-------------------

- Fixed the fixed isolation of ``product_config`` between tests.

- When the enhanced breadcrumbs (#10151) are disabled, the path to the
  workingcopy is shown again, instead of always showing the path to the
  repository object.


1.53.3 (2012-03-14)
-------------------

- The enhanced breadcrumbs (#10151) are configurable now via the product-config
  option ``breadcrumbs-use-common-metadata`` (true or false).

- Fixed isolation of ``product_config`` between tests.


1.53.2 (2012-03-06)
-------------------

- Backout changeset:89a6328dd4d0: This changeset was grafted from editor-ng but
  does not work on default as it changes publication security. The change
  prevents quick publish in zeit.content.cp then.



1.53.1 (2012-03-06)
-------------------

- Testing expected ``/bin/true`` to exist which is not the case on all systems.
  Just using ``true`` now, expecting true to be somewhere in the path.


1.53.0 (2012-03-06)
-------------------
- Added metadata checkbox show commentthread (zeit-mantis 3664)

- Limit the amount of PubliationDependencies that are actually published;
  configurable as product config of zeit.workflow: ``dependency-publish-limit``
  (#10242).

- Use gocept.testing.

- For an article, include ressort and sub-ressort in the breadcrumbs instead
  of the repository path. (#10151)

- Restructured test layer and test cases so as to have a more reliable
  tear-down. (#10456)

- Added helpers for selenium tests: eval JS and wait for conditions in the
  current window. Also use gocept.zcapatch to register temporary views etc.

